--- a/Databases and information security/11-03-hw/11-03.md
+++ b/Databases and information security/11-03-hw/11-03.md
@@ -6,6 +6,7 @@
 
 *Приведите скриншот команды 'curl -X GET 'localhost:9200/_cluster/health?pretty', сделанной на сервере с установленным Elasticsearch. Где будет виден нестандартный cluster_name*.
 
+![elastic](img/rVuKqgodj3.png)`
 ---
 
 ### Задание 2. Kibana
@@ -16,13 +17,16 @@
 
 ---
 
-![memcached запущен](rVuKqgodj3.png)`
+![kibana](img/kibana.png)`
 
 ### Задание 3. Logstash
 
 Установите и запустите Logstash и Nginx. С помощью Logstash отправьте access-лог Nginx в Elasticsearch. 
 
 *Приведите скриншот интерфейса Kibana, на котором видны логи Nginx.*
+
+
+![kibana](img/Screenshot_6.png)`
 
 ---
 
@@ -32,7 +36,7 @@
 
 *Приведите скриншот интерфейса Kibana, на котором видны логи Nginx, которые были отправлены через Filebeat.*
 
-
+![kibana-filebeat](img/Screenshot_4.png)`
 ## Дополнительные задания (со звёздочкой*)
 Эти задания дополнительные, то есть не обязательные к выполнению, и никак не повлияют на получение вами зачёта по этому домашнему заданию. Вы можете их выполнить, если хотите глубже шире разобраться в материале.
 
