--- a/Databases and information security/12-01-hw/12-01.md
+++ b/Databases and information security/12-01-hw/12-01.md
@@ -13,6 +13,7 @@
 - какие данные хранятся в этих таблицах;
 - какой тип данных у столбцов в этих таблицах, если данные хранятся в PostgreSQL.
 
+
 Приведите решение к следующему виду:
 
 Сотрудники (
@@ -21,6 +22,71 @@
 - фамилия varchar(50),
 - ...
 - идентификатор структурного подразделения, внешний ключ, integer).
+
+project (
+	"Project_id" serial ,
+	"project_name" varchar(255)  ,
+	CONSTRAINT "Project_pk" PRIMARY KEY ("Project_id")
+) 
+
+employee (
+	"emp_id" serial ,
+	"emp_salary" integer ,
+	"emp_branch_adr_id" integer ,
+	"emp_start_date" DATE ,
+	"emp_name" varchar(255) ,
+	"division_id" integer(255) ,
+	CONSTRAINT "employee_pk" PRIMARY KEY ("emp_id")
+)
+
+
+project_empployee (
+	"project_id" integer ,
+	"emp_id" integer 
+	PRIMARY KEY(project_id, emp_id)
+) 
+
+
+branch_address (
+	"branch_adr_id" serial  ,
+	"city_id" integer  ,
+	"region_id" integer  ,
+	"street_id" integer  ,
+	"bld_id" integer  ,
+	"country_id" integer ,
+	CONSTRAINT "branch_address_pk" PRIMARY KEY ("branch_adr_id")
+) 
+
+
+Region (
+	"region_id" serial ,
+	"region_name" varchar(255)  ,
+	CONSTRAINT "Region_pk" PRIMARY KEY ("region_id")
+)
+
+
+City (
+	"City_id" serial ,
+	"City_name" varchar(255)  ,
+	CONSTRAINT "City_pk" PRIMARY KEY ("City_id")
+)
+
+
+
+Street (
+	"Street_id" serial ,
+	"Street_name" varchar(255)  ,
+	CONSTRAINT "Street_pk" PRIMARY KEY ("Street_id")
+) 
+
+Division (
+	"division_id" serial ,
+	"division_name" varchar(255)  ,
+	"division_type_id" serial(255) ,
+	CONSTRAINT "division_pk" PRIMARY KEY ("division_id")
+) 
+
+
 
 ## Дополнительные задания (со звёздочкой*)
 Эти задания дополнительные, то есть не обязательные к выполнению, и никак не повлияют на получение вами зачёта по этому домашнему заданию. Вы можете их выполнить, если хотите глубже шире разобраться в материале.
