--- a/Databases and information security/11-04-hw/11-04.md
+++ b/Databases and information security/11-04-hw/11-04.md
@@ -7,7 +7,7 @@
 Добавьте management plug-in и зайдите в веб-интерфейс.
 
 *Итогом выполнения домашнего задания будет приложенный скриншот веб-интерфейса RabbitMQ.*
-![RabbitMQ](img\Screenshot_8.png)`
+![RabbitMQ](img/Screenshot_8.png)`
 ---
 
 ### Задание 2. Отправка и получение сообщений
@@ -25,8 +25,8 @@ $ pip install pika
 Зайдите в веб-интерфейс, найдите очередь под названием hello и сделайте скриншот.
 После чего запустите второй скрипт consumer.py и сделайте скриншот результата выполнения скрипта
 
-![RabbitMQproducer](img\Screenshot_9.png)`
-![RabbitMQconsumer](img\Screenshot_10.png)`
+![RabbitMQproducer](img/Screenshot_9.png)`
+![RabbitMQconsumer](img/Screenshot_10.png)`
 
 ---
 
@@ -52,25 +52,25 @@ $ cat /etc/hosts
 ```shell script
 $ rabbitmqctl cluster_status
 ```
-![RabbitMQcluster_status](img\Screenshot_11.png)`
-![RabbitMQcluster_queues_politics](img\Screenshot_12.png)`
+![RabbitMQcluster_status](img/Screenshot_11.png)`
+![RabbitMQcluster_queues_politics](img/Screenshot_12.png)`
 Для закрепления материала снова запустите скрипт producer.py и приложите скриншот выполнения команды на каждой из нод:
 
 ```shell script
 $ rabbitmqadmin get queue='hello'
 ```
-![RabbitMQcluster_queue_hello](img\Screenshot_1.png)`
+![RabbitMQcluster_queue_hello](img/Screenshot_1.png)`
 
 После чего попробуйте отключить одну из нод, желательно ту, к которой подключались из скрипта, затем поправьте параметры подключения в скрипте consumer.py на вторую ноду и запустите его.
 
 *Приложите скриншот результата работы второго скрипта.*
 
 При выключении первой ноды и попытке забрать очередь выводит ошибку.
-![RabbitMQcluster_1](img\Screenshot_2.png)`
+![RabbitMQcluster_1](img/Screenshot_2.png)`
 Настройки consumer.py
-![RabbitMQcluster_2](img\Screenshot_3.png)`
+![RabbitMQcluster_2](img/Screenshot_3.png)`
 rabbitmqctl list_policies
-![RabbitMQcluster_3](img\Screenshot_4.png)`
+![RabbitMQcluster_3](img/Screenshot_4.png)`
 
 
 ### * Задание 4. Ansible playbook
