--- a/Databases and information security/12-06-hw/12-06.md
+++ b/Databases and information security/12-06-hw/12-06.md
@@ -21,8 +21,10 @@ Master-master репликация позволяет двум или более
 Выполните конфигурацию master-slave репликации, примером можно пользоваться из лекции.
 
 *Приложите скриншоты конфигурации, выполнения работы: состояния и режимы работы серверов.*
-![master](img/Screenshot_3.png)`
-![slave](img/Screenshot_1.png)`
+
+![master](img/Screenshot_3.png)'
+
+![slave](img/Screenshot_1.png)'
 ---
 
 ## Дополнительные задания (со звёздочкой*)
