--- a/Databases and information security/12-02-hw/12-02.md
+++ b/Databases and information security/12-02-hw/12-02.md
@@ -9,11 +9,13 @@
 1.2. Создайте учётную запись sys_temp. 
 
 1.3. Выполните запрос на получение списка пользователей в базе данных. (скриншот)
+
 ![sql_users](img/Screenshot_6.png)`
 
 1.4. Дайте все права для пользователя sys_temp. 
 
 1.5. Выполните запрос на получение списка прав для пользователя sys_temp. (скриншот)
+
 ![sql_user_permissions_](img/Screenshot_1.png)`
 
 1.6. Переподключитесь к базе данных от имени sys_temp.
@@ -30,7 +32,7 @@ ALTER USER 'sys_test'@'localhost' IDENTIFIED WITH mysql_native_password BY 'pass
 
 *Результатом работы должны быть скриншоты обозначенных заданий, а также простыня со всеми запросами.*
 
-
+```bash
 bash-4.4# mysql -u root -p
 
 mysql> CREATE USER 'sys_temp'@'localhost' IDENTIFIED BY '01001';
@@ -114,8 +116,8 @@ mysql> SHOW FULL TABLES;
 +----------------------------+------------+
 23 rows in set (0.01 sec)
 
-mysql>
 
+```
 
 ### Задание 2
 Составьте таблицу, используя любой текстовый редактор или Excel, в которой должно быть два столбца: в первом должны быть названия таблиц восстановленной базы, во втором названия первичных ключей этих таблиц. Пример: (скриншот/текст)
