--- a/Databases and information security/12-04-hw/12-04.md
+++ b/Databases and information security/12-04-hw/12-04.md
@@ -8,14 +8,14 @@
 - количество пользователей, закреплённых в этом магазине.
 
 ```sql
-SELECT concat(s.first_name  , ' ', s.last_name) as name, c.city,  count(c2.customer_id) as Quantitity 
+SELECT concat(s.first_name, ' ', s.last_name) as FullName, c.city,  count(c2.customer_id) as TotalCustomers
 FROM staff s 
-JOIN address a  ON s.address_id = a.address_id 
-JOIN city c  ON a.city_id = c.city_id 
-JOIN store sr ON sr.store_id = s.store_id 
-JOIN customer cr ON sr.store_id = cr.store_id 
-GROUP BY s.first_name , s.last_name , c.city 
-HAVING Quantitity > 300;
+JOIN address a ON s.address_id = a.address_id 
+JOIN city c ON a.city_id = c.city_id 
+JOIN store s2 ON s2.store_id = s.store_id 
+JOIN customer c2 ON s2.store_id = c2.store_id 
+GROUP BY FullName, c.city 
+HAVING TotalCustomers > 300;
 ```
 
 
