--- a/Virtualization, databases and Terraform/terraform/ter-homeworks/03/hw-03.md
+++ b/Virtualization, databases and Terraform/terraform/ter-homeworks/03/hw-03.md
@@ -32,7 +32,7 @@
 Примечание: Если у вас не активирован preview доступ к функционалу "Группы безопасности" в Yandex Cloud - запросите доступ у поддержки облачного провайдера. Обычно его выдают в течении 24-х часов.
 
 Приложите скриншот входящих правил "Группы безопасности" в ЛК Yandex Cloud  или скриншот отказа в предоставлении доступа к preview версии.
-![zayavka_21_chas](2023-05-26-19-31-16.png)
+![SECURITY_GROUP](2023-05-30-11-28-23.png)
 ------
 
 ### Задание 2
@@ -60,6 +60,8 @@
 Готовый код возьмите из демонстрации к лекции [**demonstration2**](https://github.com/netology-code/ter-homeworks/tree/main/demonstration2).
 Передайте в него в качестве переменных имена и внешние ip-адреса ВМ из задания 2.1 и 2.2.
 2. Выполните код. Приложите скриншот получившегося файла. 
+![inventory](2023-06-15-15-27-14.png)
+
 
 Для общего зачета создайте в вашем GitHub репозитории новую ветку terraform-03. Закомитьте в эту ветку свой финальный код проекта, пришлите ссылку на коммит.   
 **Удалите все созданные ресурсы**.
