--- a/Virtualization, databases and Terraform/terraform/ter-homeworks/01/hw-01.md
+++ b/Virtualization, databases and Terraform/terraform/ter-homeworks/01/hw-01.md
@@ -1,31 +1,5 @@
 # Домашнее задание к занятию «Введение в Terraform»
 
-### Цель задания
-
-1. Установить и настроить Terrafrom.
-2. Научиться использовать готовый код.
-
-------
-
-### Чеклист готовности к домашнему заданию
-
-1. Скачайте и установите актуальную версию **terraform** >=1.4.0 . Приложите скриншот вывода команды ```terraform --version```.
-```bash
-# terraform --version
-Terraform v1.4.6
-on linux_amd64
-```
-2. Скачайте на свой ПК данный git репозиторий. Исходный код для выполнения задания расположен в директории **01/src**.
-3. Убедитесь, что в вашей ОС установлен docker.
-
-------
-
-### Инструменты и дополнительные материалы, которые пригодятся для выполнения задания
-
-1. Установка и настройка Terraform  [ссылка](https://cloud.yandex.ru/docs/tutorials/infrastructure-management/terraform-quickstart#from-yc-mirror)
-2. Зеркало документации Terraform  [ссылка](https://registry.tfpla.net/browse/providers) 
-3. Установка docker [ссылка](https://docs.docker.com/engine/install/ubuntu/) 
-------
 
 ### Задание 1
 
@@ -87,12 +61,7 @@ CONTAINER ID   IMAGE          COMMAND                  CREATED         STATUS   
 
 https://registry.terraform.io/providers/kreuzwerker/docker/latest/docs/resources/image#keep_locally
 
-------
 
-## Дополнительные задания (со звездочкой*)
-
-**Настоятельно рекомендуем выполнять все задания под звёздочкой.**   Их выполнение поможет глубже разобраться в материале.   
-Задания под звёздочкой дополнительные (необязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. 
 
 ### Задание 2*
 
@@ -103,4 +72,5 @@ shekeriev.
 В качестве ответа приложите plan для создаваемого ресурса и скриншот созданного в VB ресурса. 
 
 ------
-
+![plan](image.png)
+![virtualbox](image-1.png)
