--- a/Virtualization_databases_Terraform/terraform/ter-homeworks/03/hw-03.md
+++ b/Virtualization_databases_Terraform/terraform/ter-homeworks/03/hw-03.md
@@ -68,7 +68,7 @@ https://github.com/alextonkovid/homework/tree/terraform-03
 ]
 ```
 Приложите скриншот вывода команды ```terrafrom output```.
-
+![](2023-10-22-11-46-25.png)
 ------
 
 ### Задание 6* (необязательное)
@@ -81,27 +81,6 @@ https://github.com/alextonkovid/homework/tree/terraform-03
 
 Для проверки работы уберите у ВМ внешние адреса. Этот вариант используется при работе через bastion-сервер.
 Для зачёта предоставьте код вместе с основной частью задания.
-
-### Правила приёма работы
-
-В своём git-репозитории создайте новую ветку terraform-03, закоммитьте в эту ветку свой финальный код проекта. Ответы на задания и необходимые скриншоты оформите в md-файле в ветке terraform-03.
-
-В качестве результата прикрепите ссылку на ветку terraform-03 в вашем репозитории.
-
-Важно. Удалите все созданные ресурсы.
-
-### Критерии оценки
-
-Зачёт ставится, если:
-
-* выполнены все задания,
-* ответы даны в развёрнутой форме,
-* приложены соответствующие скриншоты и файлы проекта,
-* в выполненных заданиях нет противоречий и нарушения логики.
-
-На доработку работу отправят, если:
-
-* задание выполнено частично или не выполнено вообще,
-* в логике выполнения заданий есть противоречия и существенные недостатки. 
-
-
+ 
+![](2023-10-22-15-45-47.png)
+![](2023-10-22-15-47-11.png)
