--- a/kuber-homeworks/1.2/1.2.md
+++ b/kuber-homeworks/1.2/1.2.md
@@ -26,7 +26,7 @@
 1. Создать манифест (yaml-конфигурацию) Pod.
 2. Использовать image - gcr.io/kubernetes-e2e-test-images/echoserver:2.2.
 3. Подключиться локально к Pod с помощью `kubectl port-forward` и вывести значение (curl или в браузере).
-
+![](2024-03-06-14-27-21.png)
 ------
 
 ### Задание 2. Создать Service и подключить его к Pod
@@ -35,18 +35,5 @@
 2. Использовать image — gcr.io/kubernetes-e2e-test-images/echoserver:2.2.
 3. Создать Service с именем netology-svc и подключить к netology-web.
 4. Подключиться локально к Service с помощью `kubectl port-forward` и вывести значение (curl или в браузере).
-
+![](2024-03-07-11-15-38.png)
 ------
-
-### Правила приёма работы
-
-1. Домашняя работа оформляется в своем Git-репозитории в файле README.md. Выполненное домашнее задание пришлите ссылкой на .md-файл в вашем репозитории.
-2. Файл README.md должен содержать скриншоты вывода команд `kubectl get pods`, а также скриншот результата подключения.
-3. Репозиторий должен содержать файлы манифестов и ссылки на них в файле README.md.
-
-------
-
-### Критерии оценки
-Зачёт — выполнены все задания, ответы даны в развернутой форме, приложены соответствующие скриншоты и файлы проекта, в выполненных заданиях нет противоречий и нарушения логики.
-
-На доработку — задание выполнено частично или не выполнено, в логике выполнения заданий есть противоречия, существенные недостатки.
