--- a/kuber-homeworks/1.3/1.3.md
+++ b/kuber-homeworks/1.3/1.3.md
@@ -27,9 +27,14 @@
 1. Создать Deployment приложения, состоящего из двух контейнеров — nginx и multitool. Решить возникшую ошибку.
 2. После запуска увеличить количество реплик работающего приложения до 2.
 3. Продемонстрировать количество подов до и после масштабирования.
+![](2024-03-10-13-08-14.png)
+![](2024-03-10-13-09-03.png)
 4. Создать Service, который обеспечит доступ до реплик приложений из п.1.
 5. Создать отдельный Pod с приложением multitool и убедиться с помощью `curl`, что из пода есть доступ до приложений из п.1.
+![](2024-03-10-16-44-17.png)
 
+
+[deployment.yml](deployment.yml)
 ------
 
 ### Задание 2. Создать Deployment и обеспечить старт основного контейнера при выполнении условий
@@ -39,12 +44,5 @@
 3. Создать и запустить Service. Убедиться, что Init запустился.
 4. Продемонстрировать состояние пода до и после запуска сервиса.
 
-------
-
-### Правила приема работы
-
-1. Домашняя работа оформляется в своем Git-репозитории в файле README.md. Выполненное домашнее задание пришлите ссылкой на .md-файл в вашем репозитории.
-2. Файл README.md должен содержать скриншоты вывода необходимых команд `kubectl` и скриншоты результатов.
-3. Репозиторий должен содержать файлы манифестов и ссылки на них в файле README.md.
-
-------
+[init-conteiner.yml](init-conteiner.yml)
+[nginx-init-service.yml](nginx-init-service.yml)
