--- a/kuber-homeworks/1.4/1.4.md
+++ b/kuber-homeworks/1.4/1.4.md
@@ -30,6 +30,11 @@
 4. Продемонстрировать доступ с помощью `curl` по доменному имени сервиса.
 5. Предоставить манифесты Deployment и Service в решении, а также скриншоты или вывод команды п.4.
 
+
+![](2024-03-13-15-34-28.png)
+
+[deployment](deployment.yml)
+[service](service.yml)
 ------
 
 ### Задание 2. Создать Service и обеспечить доступ к приложениям снаружи кластера
@@ -38,11 +43,6 @@
 2. Продемонстрировать доступ с помощью браузера или `curl` с локального компьютера.
 3. Предоставить манифест и Service в решении, а также скриншоты или вывод команды п.2.
 
-------
+![](2024-03-13-16-05-52.png)
 
-### Правила приёма работы
-
-1. Домашняя работа оформляется в своем Git-репозитории в файле README.md. Выполненное домашнее задание пришлите ссылкой на .md-файл в вашем репозитории.
-2. Файл README.md должен содержать скриншоты вывода необходимых команд `kubectl` и скриншоты результатов.
-3. Репозиторий должен содержать тексты манифестов или ссылки на них в файле README.md.
-
+[service_node.yml](service_node.yml)
