--- a/kuber-homeworks/1.5/1.5.md
+++ b/kuber-homeworks/1.5/1.5.md
@@ -6,12 +6,10 @@
 
 ------
 
-### Чеклист готовности к домашнему заданию
+helm repo add ingress-nginx https://kubernetes.github.io/ingress-nginx
+helm repo update
 
-1. Установленное k8s-решение (например, MicroK8S).
-2. Установленный локальный kubectl.
-3. Редактор YAML-файлов с подключённым Git-репозиторием.
-
+helm -n ingress-nginx install ingress-nginx ingress-nginx/ingress-nginx
 ------
 
 ### Инструменты и дополнительные материалы, которые пригодятся для выполнения задания
@@ -31,6 +29,12 @@
 4. Продемонстрировать, что приложения видят друг друга с помощью Service.
 5. Предоставить манифесты Deployment и Service в решении, а также скриншоты или вывод команды п.4.
 
+![](2024-03-19-11-23-30.png)
+
+- [backend](backend.yml) 
+- [frontend](frontend.yml) 
+- [service_multitool](service_multitool.yml) 
+- [service](service.yml)
 ------
 
 ### Задание 2. Создать Ingress и обеспечить доступ к приложениям снаружи кластера
@@ -39,13 +43,6 @@
 2. Создать Ingress, обеспечивающий доступ снаружи по IP-адресу кластера MicroK8S так, чтобы при запросе только по адресу открывался _frontend_ а при добавлении /api - _backend_.
 3. Продемонстрировать доступ с помощью браузера или `curl` с локального компьютера.
 4. Предоставить манифесты и скриншоты или вывод команды п.2.
+![](2024-03-19-14-16-44.png)
+![](2024-03-19-14-17-04.png)
 
-------
-
-### Правила приема работы
-
-1. Домашняя работа оформляется в своем Git-репозитории в файле README.md. Выполненное домашнее задание пришлите ссылкой на .md-файл в вашем репозитории.
-2. Файл README.md должен содержать скриншоты вывода необходимых команд `kubectl` и скриншоты результатов.
-3. Репозиторий должен содержать тексты манифестов или ссылки на них в файле README.md.
-
-------
