--- a/kuber-homeworks/1.5/1.5.md
+++ b/kuber-homeworks/1.5/1.5.md
@@ -44,6 +44,8 @@ helm -n ingress-nginx install ingress-nginx ingress-nginx/ingress-nginx
 3. Продемонстрировать доступ с помощью браузера или `curl` с локального компьютера.
 4. Предоставить манифесты и скриншоты или вывод команды п.2.
 
+[ingress](ingress.yml)
+
 ![](2024-03-19-14-16-44.png)
 ![](2024-03-19-14-17-04.png)
 
