--- a/kuber-homeworks/2.1/2.1.md
+++ b/kuber-homeworks/2.1/2.1.md
@@ -6,14 +6,6 @@
 
 ------
 
-### Чеклист готовности к домашнему заданию
-
-1. Установленное K8s-решение (например, MicroK8S).
-2. Установленный локальный kubectl.
-3. Редактор YAML-файлов с подключенным GitHub-репозиторием.
-
-------
-
 ### Дополнительные материалы для выполнения задания
 
 1. [Инструкция по установке MicroK8S](https://microk8s.io/docs/getting-started).
@@ -34,6 +26,9 @@
 4. Продемонстрировать, что multitool может читать файл, который периодоически обновляется.
 5. Предоставить манифесты Deployment в решении, а также скриншоты или вывод команды из п. 4.
 
+![](2024-03-19-16-52-08.png)
+
+[busybox-multitool](busybox-multitool.yml)
 ------
 
 ### Задание 2
@@ -47,12 +42,7 @@
 3. Продемонстрировать возможность чтения файла изнутри пода.
 4. Предоставить манифесты Deployment, а также скриншоты или вывод команды из п. 2.
 
-------
+![](2024-03-19-16-56-30.png)
 
-### Правила приёма работы
-
-1. Домашняя работа оформляется в своём Git-репозитории в файле README.md. Выполненное задание пришлите ссылкой на .md-файл в вашем репозитории.
-2. Файл README.md должен содержать скриншоты вывода необходимых команд `kubectl`, а также скриншоты результатов.
-3. Репозиторий должен содержать тексты манифестов или ссылки на них в файле README.md.
-
+[daemon-set.yml](daemon-set.yml)
 ------
