--- a/kuber-homeworks/2.2/2.2.md
+++ b/kuber-homeworks/2.2/2.2.md
@@ -6,14 +6,6 @@
 
 ------
 
-### Чеклист готовности к домашнему заданию
-
-1. Установленное K8s-решение (например, MicroK8S).
-2. Установленный локальный kubectl.
-3. Редактор YAML-файлов с подключенным GitHub-репозиторием.
-
-------
-
 ### Дополнительные материалы для выполнения задания
 
 1. [Инструкция по установке NFS в MicroK8S](https://microk8s.io/docs/nfs). 
@@ -32,9 +24,41 @@
 1. Создать Deployment приложения, состоящего из контейнеров busybox и multitool.
 2. Создать PV и PVC для подключения папки на локальной ноде, которая будет использована в поде.
 3. Продемонстрировать, что multitool может читать файл, в который busybox пишет каждые пять секунд в общей директории. 
+![multitool](image.png)
 4. Удалить Deployment и PVC. Продемонстрировать, что после этого произошло с PV. Пояснить, почему.
-5. Продемонстрировать, что файл сохранился на локальном диске ноды. Удалить PV.  Продемонстрировать что произошло с файлом после удаления PV. Пояснить, почему.
+![alt text](image-1.png)
+---
+
+Когда PVC удаляется, само по себе это не влияет на PV. PV и PVC независимы друг от друга. 
+
+После удаления PVC, PV остаётся нетронутым. PV будет доступен для привязки к новому PVC или может остаться без привязки до тех пор, пока не будет удален вручную администратором кластера. 
+
+Однако в зависимости от настроек reclaim policy для PV, могут быть разные последствия:
+
+- **Retain**: В этом случае, при удалении PVC, PV остается нетронутым, и администратор должен вручную освободить или переиспользовать ресурсы PV.
+  
+- **Delete**: При удалении PVC, PV может быть удален автоматически. Это означает, что после удаления PVC, PV также будет удален и ресурсы хранилища освобождаются.
+
+- **Recycle**: Это политика, которая не очень популярна и в настоящее время находится в процессе удаления из Kubernetes. Она подразумевает удаление содержимого PV при удалении PVC, но на практике она не поддерживается многими хранилищами и может создавать потенциальные уязвимости в безопасности.
+
+Таким образом, в зависимости от выбранной reclaim policy, после удаления PVC PV может оставаться доступным для привязки к другим PVC или быть удаленным вместе с его содержимым.
+
+---
+
+5. Продемонстрировать, что файл сохранился на локальном диске ноды. 
+![alt text](image-2.png)
+Удалить PV.  Продемонстрировать что произошло с файлом после удаления PV. Пояснить, почему.
+![alt text](image-3.png)
+
+
+Так как политика StorageClass nfs-csi равна reclaimPolicy: Retain файлы не удаляются после удаления PV
+
 5. Предоставить манифесты, а также скриншоты или вывод необходимых команд.
+
+- [busybox-multitool.yml](busybox-multitool.yml)
+- [pv.yml](pv.yml) 
+- [pvc-nfs.yaml](pvc-nfs.yaml)
+- [sc-nfs.yaml](sc-nfs.yaml)
 
 ------
 
@@ -49,10 +73,87 @@
 3. Продемонстрировать возможность чтения и записи файла изнутри пода. 
 4. Предоставить манифесты, а также скриншоты или вывод необходимых команд.
 
+![alt text](image-4.png)
+
+[(multitool-dynamic.yml](multitool-dynamic.yml)
 ------
 
-### Правила приёма работы
+<details>
+  <summary>helper</summary>
+  
+curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
 
-1. Домашняя работа оформляется в своём Git-репозитории в файле README.md. Выполненное задание пришлите ссылкой на .md-файл в вашем репозитории.
-2. Файл README.md должен содержать скриншоты вывода необходимых команд `kubectl`, а также скриншоты результатов.
-3. Репозиторий должен содержать тексты манифестов или ссылки на них в файле README.md.
+helm repo add stable https://charts.helm.sh/stable && helm repo update
+helm install nfs-server stable/nfs-server-provisioner
+sudo apt install nfs-common  -y
+
+
+kubectl apply -f pvc.yaml
+kubectl apply -f pod.yaml
+apiVersion: v1
+kind: Pod
+metadata:
+  name: local-nginx
+spec:
+  containers:
+    - name: nginx
+      image: nginx
+      volumeMounts:
+        - mountPath: "/static"
+          name: my-volume
+  volumes:
+    - name: my-volume
+      persistentVolumeClaim:
+        claimName: task-pv-claim
+
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: task-pv-volume
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 10Mi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/test"
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: task-pv-claim
+spec:
+  storageClassName: manual
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Mi
+apiVersion: v1
+kind: Pod
+metadata:
+  name: nginx
+spec:
+  containers:
+    - name: nginx
+      image: nginx
+      volumeMounts:
+        - mountPath: "/static"
+          name: my-volume
+  volumes:
+    - name: my-volume
+      persistentVolumeClaim:
+        claimName: pvc
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: pvc
+spec:
+  storageClassName: "nfs"
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Mi
+</details>
+
