--- a/kuber-homeworks/2.3/2.3.md
+++ b/kuber-homeworks/2.3/2.3.md
@@ -30,6 +30,13 @@
 4. Сделать простую веб-страницу и подключить её к Nginx с помощью ConfigMap. Подключить Service и показать вывод curl или в браузере.
 5. Предоставить манифесты, а также скриншоты или вывод необходимых команд.
 
+![alt text](image.png)
+![alt text](image-1.png)
+
+- [configmap-deployment.yml](configmap-deployment.yml) 
+- [multitool-nginx-configmap.yml](multitool-nginx-configmap.yml) 
+- [nginx-config-html.yml](nginx-config-html.yml)
+
 ------
 
 ### Задание 2. Создать приложение с вашей веб-страницей, доступной по HTTPS 
@@ -40,6 +47,11 @@
 4. Создать Ingress и необходимый Service, подключить к нему SSL в вид. Продемонстировать доступ к приложению по HTTPS. 
 4. Предоставить манифесты, а также скриншоты или вывод необходимых команд.
 
+
+![alt text](image-3.png)
+- [service-secret.yml](service-secret.yml)
+- [configmap-deployment-nginx.yml](configmap-deployment-nginx.yml)
+- [ingress-secret.yml](ingress-secret.yml)
 ------
 
 ### Правила приёма работы
