kuber HA cluster

--- a/kuber-homeworks/3.1/3.1.md
+++ b/kuber-homeworks/3.1/3.1.md
@@ -33,3 +33,55 @@
 5. Добавьте служебные ресурсы к нодам. Помните, что для разных типов нод требовния к ресурсам разные. 
 6. В результате должно быть указано количество нод и их параметры.
 
+# Требования к ресурсам для Kubernetes
+
+## Компоненты приложения:
+1. **База данных**:
+   - **Ресурсы на одну реплику**:
+     - ОЗУ: 4 ГБ
+     - ЦП: 1 ядро
+   - **Количество реплик**: 3
+   - **Общие ресурсы для базы данных**:
+     - ОЗУ: 12 ГБ
+     - ЦП: 3 ядра
+
+2. **Кэш**:
+   - **Ресурсы на одну реплику**:
+     - ОЗУ: 4 ГБ
+     - ЦП: 1 ядро
+   - **Количество реплик**: 3
+   - **Общие ресурсы для кэша**:
+     - ОЗУ: 12 ГБ
+     - ЦП: 3 ядра
+
+3. **Фронтенд**:
+   - **Ресурсы на один экземпляр**:
+     - ОЗУ: 50 МБ
+     - ЦП: 0,2 ядра
+   - **Количество реплик**: 5
+   - **Общие ресурсы для фронтенда**:
+     - ОЗУ: 250 МБ
+     - ЦП: 1 ядро
+
+4. **Бэкенд**:
+   - **Ресурсы на одну реплику**:
+     - ОЗУ: 600 МБ
+     - ЦП: 1 ядро
+   - **Количество реплик**: 10
+   - **Общие ресурсы для бэкенда**:
+     - ОЗУ: 6 ГБ
+     - ЦП: 10 ядер
+
+## Оценка ресурсов:
+- **Общее ОЗУ**: 30,25 ГБ
+- **Общее количество ядер ЦП**: 17 ядер
+
+## Учет отказоустойчивости:
+- **Запас ОЗУ**: 36,3 ГБ
+- **Запас ядер ЦП**: 20,4 ядра
+
+## Ресурсы на один рабочий узел:
+- **ОЗУ на одном узле**: 8 ГБ
+- **Ядра ЦП на одном узле**: 4 ядра
+
+Потребуется не менее 5 рабочих узлов, каждый с 8 ГБ ОЗУ и 4 ядрами ЦП.
