--- a/kuber-homeworks/3.2/3.2.md
+++ b/kuber-homeworks/3.2/3.2.md
@@ -20,8 +20,11 @@
 
 1. Подготовка работы кластера из 5 нод: 1 мастер и 4 рабочие ноды.
 2. В качестве CRI — containerd.
+![alt text](image-1.png)
 3. Запуск etcd производить на мастере.
 4. Способ установки выбрать самостоятельно.
+
+![alt text](image.png)
 
 ## Дополнительные задания (со звёздочкой)
 
@@ -34,6 +37,9 @@
 1. Установить кластер в режиме HA.
 2. Использовать нечётное количество Master-node.
 3. Для cluster ip использовать keepalived или другой способ.
+
+![alt text](image-2.png)
+![alt text](image-3.png)
 
 ### Правила приёма работы
 
