VPC AWS finished

--- a/clopro-homeworks/1/15.1.md
+++ b/clopro-homeworks/1/15.1.md
@@ -31,6 +31,7 @@ Resource Terraform для Yandex Cloud:
 
 ---
 ### Задание 2. AWS* (задание со звёздочкой)
+![alt text](image-1.png)
 
 Это необязательное задание. Его выполнение не влияет на получение зачёта по домашней работе.
 
