--- a/clopro-homeworks/2/15.2.md
+++ b/clopro-homeworks/2/15.2.md
@@ -9,7 +9,7 @@
 
 ---
 ## Задание 1. Yandex Cloud 
-
+![alt text](image.png)
 **Что нужно сделать**
 
 1. Создать бакет Object Storage и разместить в нём файл с картинкой:
