--- a/clopro-homeworks/3/15.3.md
+++ b/clopro-homeworks/3/15.3.md
@@ -4,7 +4,9 @@
 
 ---
 ## Задание 1. Yandex Cloud   
+![alt text](image.png)
 
+[terraform](terraform_yandex)
 1. С помощью ключа в KMS необходимо зашифровать содержимое бакета:
 
  - создать ключ в KMS;
